--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.2",
+    "react-native-biometrics": "^2.1.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-webview": "^11.14.2",
     "recoil": "^0.5.2"
   },
   "devDependencies": {
