--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-webview": "^11.14.2",
-    "recoil": "^0.5.2",
-    "recoil-persist": "^4.0.0"
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
