--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "update:patch": "node patch",
+    "postinstall": "yarn run update:patch"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.11",
@@ -27,7 +29,8 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-webview": "^11.14.2",
     "recoil": "^0.5.2",
-    "recoil-persistence": "^0.2.6"
+    "recoil-persistence": "^0.2.6",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
