build : android emulator build
m1 android emulator build setting

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "preandroid": "npx jetify",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -19,6 +20,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "jetifier": "^2.0.0",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-biometrics": "^2.1.4",
