feat : mnemonic creator

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "update:patch": "node patch",
-    "postinstall": "yarn run update:patch"
+    "postinstall": "./node_modules/.bin/rn-nodeify --hack --yarn --install buffer,crypto,events,stream,vm,process && yarn run update:patch"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.11",
@@ -20,7 +20,13 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "bip39": "^3.0.4",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "ethers": "^5.5.1",
+    "events": "^3.3.0",
     "jetifier": "^2.0.0",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-biometrics": "^2.1.4",
@@ -32,7 +38,15 @@
     "react-native-webview": "^11.14.2",
     "recoil": "^0.5.2",
     "recoil-persistence": "^0.2.6",
-    "shelljs": "^0.8.4"
+    "rn-nodeify": "tradle/rn-nodeify",
+    "shelljs": "^0.8.4",
+    "stream": "^0.0.2",
+    "vm": "^0.1.0",
+    "react-native-crypto": "^2.1.0",
+    "stream-browserify": "^1.0.0",
+    "vm-browserify": "0.0.4",
+    "readable-stream": "1.0.33",
+    "react-native-randombytes": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -61,5 +75,25 @@
       "json",
       "node"
     ]
+  },
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "vm": "vm-browserify"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "vm": "vm-browserify"
   }
 }
