--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "bip32": "2.0.6",
     "bip39": "^3.0.4",
+    "bitcoinjs-lib": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "ethers": "^5.5.1",
@@ -30,23 +32,23 @@
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-biometrics": "^2.1.4",
+    "react-native-crypto": "^2.1.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-randombytes": "^3.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-webview": "^11.14.2",
+    "readable-stream": "1.0.33",
     "recoil": "^0.5.2",
     "recoil-persistence": "^0.2.6",
     "rn-nodeify": "tradle/rn-nodeify",
     "shelljs": "^0.8.4",
     "stream": "^0.0.2",
-    "vm": "^0.1.0",
-    "react-native-crypto": "^2.1.0",
     "stream-browserify": "^1.0.0",
-    "vm-browserify": "0.0.4",
-    "readable-stream": "1.0.33",
-    "react-native-randombytes": "^3.0.0"
+    "vm": "^0.1.0",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
