--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "add": "^2.0.6",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bip32": "2.0.6",
@@ -37,11 +38,13 @@
     "react-native-biometrics": "^2.1.4",
     "react-native-crypto": "^2.1.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-simple-toast": "^1.1.3",
+    "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.14.2",
     "readable-stream": "1.0.33",
     "recoil": "^0.5.2",
@@ -52,7 +55,8 @@
     "stream-browserify": "^1.0.0",
     "vm": "^0.1.0",
     "vm-browserify": "0.0.4",
-    "web3": "1.0.0-beta.24"
+    "web3": "1.0.0-beta.24",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
