--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.66.2",
     "react-native-biometrics": "^2.1.4",
     "react-native-crypto": "^2.1.0",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.0.0",
