--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
+    "recoil-logger": "^1.2.0",
     "typescript": "^3.8.3"
   },
   "resolutions": {
